--- a/data/en/sections/about.yml
+++ b/data/en/sections/about.yml
@@ -25,7 +25,7 @@ summary: 'I am a passionate software engineer with over 3 years of working exper
 socialLinks:
 - name: Email
   icon: "fas fa-envelope"
-  url: "example@gmail.com"
+  url: "akshaybharambe14@gmail.com"
 
 - name: Github
   icon: "fab fa-github"
